trying to get page to fit correctly on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -61,9 +61,9 @@ h1{
   transform: rotate(5deg) scale(1.06);
 }
 
-@media only screen and (max-width: 700px){
+@media only screen and (max-width: 500px){
   h1{
-   font-size: 18px;
+   font-size: 24px;
   }
   p{
    font-size: 15px;
